--- a/server.cfg
+++ b/server.cfg
@@ -28,7 +28,7 @@ sv_rcon_minfailuretime 10
 hostport 27015
 motd_enabled 0
 z_difficulty normal
-//sv_steamgroup "7603623"
+//sv_steamgroup "*******"
 //sv_steamgroup_exclusive "1"
 sv_allow_lobby_connect_only 0
 sv_gametypes "coop;versus"
