--- a/server.cfg
+++ b/server.cfg
@@ -1,110 +1,115 @@
-///////////////////////////////////////////
-//       server.cfg pour L4D2            //
-//      Bienvenue Chez Les Amis          //
-//                                       //
-//           Version : 1.0               //
-//              by RoRo                  //
-///////////////////////////////////////////
-//
-//Astuces :
-// 1) Si vous des valeurs qui comportent des espaces, veuillez la mettre en "" pour evitez tout bug (cf hostname par exemple).//
-// 2) Les cvars qui commencent par sm_cvar ne fonctionneront qu'avec le plugin SourceMod !
-// 3) N'ajoutez pas la cvar sv_password, celle ci empechera le demarrage du serveur !
-// 
-// Nom du serveur
-hostname "=- [FR] L4D2 =- Bienvenue Chez Les Amis !"
-log on
+echo "============================================================================"
+echo "=== EXECUTING server.cfg                                                 ==="
+echo "============================================================================"
+//*********************************************************************************
+//                                                                                *
+//             Bienvenue Chez Les Amis - Community Developed Server.cfg           *
+//                      Version 1.2 - Left 4 Dead 2 Server.cfg                    *
+//              Usually: \l4d\left4dead2\cfg\ <-- Place inside this folder        *
+//                                                                                *
+// ********************************************************************************
 
-// // // // // start rcon settings // // // // //
+//.............................. Basic Server Settings ...........................//
 
-rcon_password "roro"
-sv_rcon_banpenalty 5
-sv_rcon_maxfailures 5
-sv_rcon_minfailures 2
-sv_rcon_minfailuretime 10
-
-// // // // // L4D cvars // // // // //
+hostname "[FR].: BCLA SERVER | T30 | VERSUS :."
 
 hostport 27015
-motd_enabled 0
-z_difficulty normal
-//sv_steamgroup "*******"
-//sv_steamgroup_exclusive "1"
-sv_allow_lobby_connect_only 0
-sv_gametypes "coop;versus"
-sv_search_key "roro"
-sv_visiblemaxplayers 8
-sv_region "3"
+motd_enabled "0"
 
-// // // // //  start cvars   // // // // //
+// Use this to prevent your custom hostfile and motdfile to be overwritten (rename the files accordingly)
+hostfile host.txt // default, rename if custom.
+motdfile motd.txt // default, rename if custom.
 
-sm_cvar mp_autoteambalance 0
-sm_cvar mp_teams_unbalance_limit 0
-sv_alltalk 0
-sm_cvar sv_allow_wait_command 0
-sm_cvar sv_timeout 120
-sm_cvar sv_consistency 1
+// No Tips from Game & Timeout
+sv_voiceenable 1
 sv_cheats 0
+sv_alltalk 1
+sv_consistency 1
+sv_pure_kick_clients 1        //default 1; If set to 1, the server will kick clients with mismatchng files. Otherwise, it will issue a warning to the client.
+sv_pure 1                    //If set to 1, server will force all client files execpt whitelisted ones (in pure_server_whitelist.txt) to match server's files.
+                            //If set to 2, the server will force all clietn files to come from steam and not load pure_server_whilelist.txt. Set to 0 for disabled.
+//sm_cvar z_difficulty "normal"
+sv_search_key "luffylaw"
+//l4d2_addons_eclipse 1							
+							
+// Steam group # to assign to server & making server private
+sv_steamgroup 0
+sv_steamgroup_exclusive 1  // 1 = Restrict Server to SteamGroup (ID Above)
 
-// // // // //  start bandwidth rates/settings  // // // // //
+// Rcon password - Sets the password for remote rcon admin
+rcon_password "popi"
+sm_cvar sv_rcon_banpenalty 1
+sm_cvar sv_rcon_maxfailures 2
 
-sm_cvar fps_max 0
-sm_cvar net_splitpacket_maxrate 60000
-sm_cvar sv_minrate 60000
-sm_cvar sv_maxrate 100000
-sm_cvar sv_mincmdrate 30
-sm_cvar sv_maxcmdrate 60
-sm_cvar sv_minupdaterate 30
-sm_cvar sv_maxupdaterate 60
-sm_cvar sv_client_min_interp_ratio 0
-sm_cvar sv_client_max_interp_ratio 2
-sm_cvar nb_update_frequency 0.024
+sm_cvar mp_gamemode "versus"
+sm_cvar survivor_limit 4
+sm_cvar z_max_player_zombies 4
+sm_cvar sv_visiblemaxplayers 8
+sm_cvar z_ghost_delay_min 20
+sm_cvar z_ghost_delay_max 20
 
-// // // // // start server logging  // // // // //
+//sm_cvar sb_all_bot_game 1
+//sm_cvar allow_all_bot_survivor_team 1
+//sm_cvar sv_hibernate_when_empty 1 
 
-// enable or disable server logging. on is on off is off
-sv_logbans 1
-// Log server bans in the server logs
-sv_logfile 1
-// Log server information in the log file. 0 is off 1 is on
-sv_log_onefile 0
-// log everything in one file
+// Realism
+sm_cvar z_common_limit 30
+//sm_cvar sv_disable_glow_survivors 1
+//sm_cvar sv_disable_glow_faritems 1
+//sm_cvar z_non_head_damage_factor_multiplier 1.0
+//sm_cvar z_witch_always_kills 1
 
-//-----------------------------------------------------------
-//--> Super Versus  SM Extension Commands
-//-----------------------------------------------------------
+//Adjust tank spawns: 100% chance on every map
+sm_cvar versus_tank_chance_finale 1
 
-//l4d_survivor_limit 4
-//sm_cvar l4d_survivor_limit 4
-//--> Maximum number of survivors. Default 4, Maximum: 18.
+//Adjust witch spawns: 0% chance on 1,5, default chance on 2,3,4
+sm_cvar versus_witch_chance_intro 0
+sm_cvar versus_witch_chance_finale 1
+sm_resetcvar versus_witch_chance 1
 
-//l4d_infected_limit 4
-//sm_cvar l4d_infected_limit 4
-//--> Maximum number of infected. Default 4, Maximum: 18.
+//Adjust boss spawn completion rates: 90% on 1-4
+//sm_cvar versus_boss_flow_max_intro 0.5
+//sm_cvar versus_boss_flow_max 0.5
 
-//l4d_supertank 0
-//sm_cvar l4d_supertank 0
-//--> Set tank HP dependent on survivor amount.
-//--> "1" to Enable, "0" to Disable. Default: "0".
+//Tanks spawn in the same place for both teams
+sm_cvar versus_tank_flow_team_variation 0.0
 
-//l4d_tank_hpmulti 0.5
-//sm_cvar l4d_tank_hpmulti 0.5
-//--> Tanks HP Multiplier (multi*(survivors-4))
-//--> Default: "0.25".
+//Allow players to switch teams 9999 times per map
+sm_cvar vs_max_team_switches 9999
 
-//l4d_XtraHP "0"
-//--> Give extra survivor medpacks.
-//--> "1" to Enable, "0" to Disable. Default: "0".
+//Disable tank suiciding if no AI path to survivors
+sm_cvar tank_stuck_time_suicide 99999999999
 
-//l4d_killreservation 1
-//sm_cvar l4d_killreservation 1
-//--> Allows more than 8 players to connect to server.
-//--> "1" to Enable, "0" to Disable. Default: "1".
+// Allow connections without creating lobby. Set to 1 to allow lobby connections only
+sv_allow_lobby_connect_only 0
 
+// Region - This sets the lobby in which your server will be part of
+// You will want to set this to the closest location to your server
+//  eastcoast       sv_region 0
+//  westcoast       sv_region 1
+//  south america   sv_region 2
+//  europe          sv_region 3
+//  asia            sv_region 4
+//  australia       sv_region 5
+//  middle east     sv_region 6
+//  africa          sv_region 7
+//  world           sv_region 255
+sv_region 3
 
-//-----------------------------------------------------------
-//--> Custom Modifications for a competitive hike
-//-----------------------------------------------------------
+/////////////////////////
+//Serveur Rates
+////////////
+exec server_net_30tick.cfg
 
-writeip               //Save the ban list to banned_ip.cfg.
-writeid              //Wrties a list of permanently-banned user IDs to banned_user.cfg.
+// Server Logging
+log on
+sv_log_onefile 0        // Log server information to only one file.
+sv_logbans 1            // Log server bans in the server logs.
+sv_logecho 0            // Echo log information to the console.
+sv_logfile 1            // Log server information in the log file.
+sv_logflush 0           // Flush the log file to disk on each write (slow).
+sv_logsdir logs         // Folder in the game directory where server logs will be stored.
+exec banned_user.cfg    // List of banned steam ids.
+exec banned_ip.cfg      // List of banned IP addresses.
+writeid
+writeip
