--- a/server_net_30tick.cfg
+++ b/server_net_30tick.cfg
@@ -10,10 +10,10 @@ sm_cvar sv_client_max_interp_ratio 2
 sm_cvar nb_update_frequency 0.024
 sm_cvar net_splitpacket_maxrate 15000 // Keep this on ( Tickrate / 2 ) * 1000
 
-//sm_cvar sm_fixlerp 1
-//sm_cvar sm_max_interp 0.1
-
-
+sm_cvar sm_fixlerp 1
+sm_cvar sm_max_interp 0.1
+sm_cvar sm_announce_lerp 1
+sm_cvar sm_log_lerp 1 
 
 // [lerpmonitor.smx]
 sm_cvar sm_allowed_lerp_changes 3
